# flashpack

./: .eslintrc.cjs  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  styles.css  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: 200.html  app.d.ts  app.html  app.postcss  app.rs  commands.rs  context.rs  invoke.rs  katex.css  main.rs  params.rs  slides.rs  svelte-autosize.d.ts  theme.postcss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230310191804_initial.sql  20230330164250_card_label.sql  20230411145327_scripting.sql  20230424165347_no_dealers.sql  20230429220432_study_query.sql  20230723094055_initial.sql
src-tauri/src/: card.rs  commands.rs  db.rs  dealer.rs  engine.rs  error.rs  filter.rs  fleeting.rs  main.rs  pack.rs  query.rs  study.rs
src-tauri/src/markdown/: asciimath_tex.js  mod.rs
src/app/: params.rs
src/bindings/: Card.ts  CardAdd.ts  CardSlides.ts  CardSummary.ts  Completeness.ts  Dealer.ts  DealerFilter.ts  DealerSummary.ts  Filter.ts  FilterSummary.ts  FullPrompt.ts  GroupedWeightedFilters.ts  ModifyCard.ts  ModifyDealer.ts  ModifyFilter.ts  ModifyPack.ts  ModifyStudy.ts  Pack.ts  PackCreate.ts  PackSummary.ts  PackUpdate.ts  Prompt.ts  Question.ts  Quiz.ts  QuizQuery.ts  QuizSummary.ts  Study.ts  StudyTags.ts  Tag.ts  WeightedFilter.ts
src/lib/: AddCard.svelte  CardFlip.svelte  CardView.svelte  ContextMenu.svelte  CreatePack.svelte  Markdown.svelte  MenuButton.svelte  Modal.svelte  ModalContext.svelte  ModalController.svelte  (+20 more)
(+93 files in other folders)
