[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.69"
thiserror = "1.0.38"
ts-rs = "6.2.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
rand = "0.8.5"
futures = "0.3.27"
nom = "7.1"
rhai = "1.13"
rhai-rand = "0.1.5"
pulldown-cmark = "0.9.2"
katex = { version = "0.4.6", features = ["duktape"], default-features = false }
js-sandbox = "0.1.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
